feat: add downloading movies from the server when the user click on the search button

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,5 +14,17 @@
     "plugins": [
         "react"
     ],
-    "rules": {}
+    "rules": {
+        "no-underscore-dangle": [
+            "error",
+            {
+                "allow": [
+                    "_id",
+                    "_url",
+                    "_headers",
+                    "_token"
+                ]
+            }
+        ]
+    }
 }
