--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,8 @@
     },
     "extends": [
         "plugin:react/recommended",
+        "plugin:jsx-a11y/recommended",
+        "plugin:react-hooks/recommended",
         "airbnb"
     ],
     "overrides": [],
@@ -19,10 +21,7 @@
             "error",
             {
                 "allow": [
-                    "_id",
-                    "_url",
-                    "_headers",
-                    "_token"
+                    "_id"
                 ]
             }
         ]
